--- a/jquery/css/style.css
+++ b/jquery/css/style.css
@@ -14,7 +14,7 @@ header{
 }
 
 .Logo{
-    display: inline-block;
+    float: left;;
     height: 96px;
     padding: 15px;
 }
@@ -24,6 +24,12 @@ header{
 }
 
 .Hamburguer{
+    background-color: #888888;
+    text-decoration: none;
+    font-size: 2em;
+    padding: 0px 8px 0px 8px;
+    color: #fff;
+    border-radius: 5px;
     display: none;
 }
 
@@ -101,4 +107,45 @@ footer{
     cursor: pointer;
     right: 15px;
     bottom: 15px;
+}
+
+/************** Tratamento responsivo ***************/
+
+@media (max-width: 480px){
+    header{
+        height: 88px;
+    }
+    .Logo{
+        height: 64px;
+        padding: 12px;
+    }
+    .Hamburguer{
+        display: block;
+        float: right;
+        margin: 22px
+    }
+
+    .Menu{
+        float: left;
+        width: 100%;
+        padding: 0;
+    }
+
+    .Menu ul{
+        background-color: #fff;
+        display: none; /*Jquery*/
+    }
+
+    .Menu ul li{
+        float: none;
+    }
+
+    .Menu ul li a{
+        padding: 15px;
+        display: block;
+    }
+
+    .Destaque li{
+        float: none;
+    }
 }
